# workshop-airflow

./: .env  Dockerfile  airflow.cfg  exemplo_00.py  exemplo_01.py  pyproject.toml  requirements.txt
dags/: api_to_postgres.py  primeira_dag.py  quarta_dag.py  quinta_dag.py  segunda_dag.py  sexta_dag.py  terceira_dag.py
frontend/: exemplo_03.py
include/: controller.py  db.py  models.py
