[tool.poetry]
name = "workshop-airflow"
version = "0.1.0"
description = ""
authors = ["Gustavo Reis <gustavoazreis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.3"
streamlit = "^1.43.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
